--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,12 +5,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {{!-- <link rel="stylesheet" href="/public/css/style.css"> --}}
+        <link rel="stylesheet" href="/public/css/style.css">
+
 </head>
 
 <body>
 
-    {{>Navbar}}
-    <h1>Html page form hbs ext</h1>
+    {{>navbar}}
+
+<div class="form-container"> 
+<form>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputEmail4">Email</label>
+      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="inputPassword4">Password</label>
+      <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="inputAddress">Address</label>
+    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+  </div>
+  
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputCity">City</label>
+      <input type="text" class="form-control" id="inputCity">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="inputState">State</label>
+     
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputZip">Pincode</label>
+      <input type="text" class="form-control" id="inputZip">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="gridCheck">
+      <label class="form-check-label" for="gridCheck">
+        Check me out
+      </label>
+    </div>
+  </div>
+
+  <button type="submit" class="btn btn-primary">Register</button>
+</form>
+</div>
 </body>
 
 </html>
